--- a/Mutualfriends.ipynb
+++ b/Mutualfriends.ipynb
@@ -38,8 +38,8 @@
         "import time\n",
         "import tweepy\n",
         "\n",
-        "auth = tweepy.OAuthHandler(\"QsmNroZ5V6ghSPJ1TEGwMA2QR\", \"E7lHrsHc0P3EU6MYSHdzpmSkqXMNzCJYf6Mk9veCmoEB78pgIg\") #(key, secret)\n",
-        "auth.set_access_token(\"3382755314-upIENhytORCLH3EKAQJl0GrHFbMXsfyHKfqlRna\", \"5i4U55MU7dvwtCN5v8ZALik5XD4qZK3Jg8bkhFrVFhscu\") #(token, secret token)\n",
+        "auth = tweepy.OAuthHandler(\"xxxxxxxxxxxxxxxxxxxxx\", \"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\") #(key, secret)\n",
+        "auth.set_access_token(\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\", \"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\") #(token, secret token)\n",
         "\n",
         "\n",
         "api = tweepy.API(auth, wait_on_rate_limit=True, wait_on_rate_limit_notify=True, compression=True)\n",
