--- a/tweetscraping.ipynb
+++ b/tweetscraping.ipynb
@@ -43,10 +43,10 @@
     {
       "cell_type": "code",
       "source": [
-        "consumer_key= \"QsmNroZ5V6ghSPJ1TEGwMA2QR\"\n",
-        "consumer_secret_key=\"E7lHrsHc0P3EU6MYSHdzpmSkqXMNzCJYf6Mk9veCmoEB78pgIg\"\n",
-        "access_token=\"3382755314-upIENhytORCLH3EKAQJl0GrHFbMXsfyHKfqlRna\"\n",
-        "access_token_secret=\"5i4U55MU7dvwtCN5v8ZALik5XD4qZK3Jg8bkhFrVFhscu\""
+        "consumer_key= \"xxxxxxxxxxxxxxxxxxxxx\"\n",
+        "consumer_secret_key=\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
+        "access_token=\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
+        "access_token_secret=\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\""
       ],
       "metadata": {
         "id": "S93FiFIirbvi"
