--- a/ClusteringbyuserBio.ipynb
+++ b/ClusteringbyuserBio.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ClusteringbyuserBio.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWk3il39sRvkxBKYGG6W8q",
+      "authorship_tag": "ABX9TyMYUy0lzaGTALlbgxcwDEmd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,8 +39,8 @@
         "import tweepy\n",
         "import pandas as pd\n",
         "\n",
-        "auth = tweepy.OAuthHandler(\"QsmNroZ5V6ghSPJ1TEGwMA2QR\", \"E7lHrsHc0P3EU6MYSHdzpmSkqXMNzCJYf6Mk9veCmoEB78pgIg\") #(key, secret)\n",
-        "auth.set_access_token(\"3382755314-upIENhytORCLH3EKAQJl0GrHFbMXsfyHKfqlRna\", \"5i4U55MU7dvwtCN5v8ZALik5XD4qZK3Jg8bkhFrVFhscu\") #(token, secret token)\n",
+        "auth = tweepy.OAuthHandler(\"xxxxxxxxxxxxxxxxxxxx\", \"xxxxxxxxxxxxxxxxxxxxxxxxxx\") #(key, secret)\n",
+        "auth.set_access_token(\"xxxxxxxxxxxxxxxxxxx\", \"xxxxxxxxxxxxxx\") #(token, secret token)\n",
         "\n",
         "\n",
         "api = tweepy.API(auth, wait_on_rate_limit=True, wait_on_rate_limit_notify=True, compression=True)\n",
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "zGl1CamrtPRE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "1hiBZbw8tVe5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "id": "MSyiVmmhtXbh",
         "outputId": "dd150bac-8452-42e1-dadf-34222051f9fb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
         "id": "vHmrEUkxtaL2",
         "outputId": "7d09bb11-7b6c-4960-cca2-b42f31c472b3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
       "metadata": {
         "id": "drH_C9gutg9p"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
         "id": "BBaqzcRettF6",
         "outputId": "1171c95e-b375-4761-e317-67985433a178"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +511,7 @@
       "metadata": {
         "id": "xaWgCWZ9ty9c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
         "id": "1XQ_aRU-t3hb",
         "outputId": "627ce102-8b07-4df6-9362-25ba002c69e2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -804,7 +804,7 @@
         "id": "wo9OMrvut_bF",
         "outputId": "4a35644b-2401-44c2-8ddd-698da9d051d3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +998,7 @@
         "id": "rAgAK4v7x0K6",
         "outputId": "d5f854b6-e7c2-454e-df9f-2a9c6349e7b6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1030,7 +1030,7 @@
         "id": "1jSEg9p1yAAV",
         "outputId": "ea3ea63d-ea0b-4a23-940f-400ffacdd706"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
       "metadata": {
         "id": "q_HebiJqyLAc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1098,7 +1098,7 @@
       "metadata": {
         "id": "T9P7T4loyMMx"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1114,7 +1114,7 @@
         "id": "GmmUVJGuyO41",
         "outputId": "6c8066f8-e990-4cc0-ec82-fee54409afb5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1143,7 +1143,7 @@
         "id": "YC0wEUOQz3Ze",
         "outputId": "31850597-b4c5-46c8-a357-03387afef8e2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "K3wxHobe0UHx"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1206,7 @@
         "id": "sPvHXBn_0ajW",
         "outputId": "7591120d-759c-46d3-f98f-8607279f464f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1316,7 +1316,7 @@
         "id": "JgH4pZtT00S7",
         "outputId": "6b840b42-f6f3-4cb2-939c-8a1ddf9b2062"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,7 +2000,7 @@
         "id": "hF-I3WoGyjAN",
         "outputId": "701c03ba-dc70-47c7-80e9-42cbc3544bdc"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2031,7 +2031,7 @@
       "metadata": {
         "id": "zhfXtNdG2mdw"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2042,7 +2042,7 @@
       "metadata": {
         "id": "xDb64Rac2odh"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2069,7 +2069,7 @@
       "metadata": {
         "id": "9xzWOI_j2wb4"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2086,7 +2086,7 @@
         "id": "dtvWO-Nc2_sT",
         "outputId": "fd80d49e-5cb9-4f8c-9624-054c98ba192c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2135,7 +2135,7 @@
       "metadata": {
         "id": "JyckFNT43E8g"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2153,7 +2153,7 @@
         "id": "Z-pexUu13J3u",
         "outputId": "d380256f-efc3-4533-dc78-6cda90f6ec65"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2188,7 +2188,7 @@
       "metadata": {
         "id": "tzzHDhxb3to1"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     }
   ]
