--- a/TOFINDFOLLOWERSNAME.ipynb
+++ b/TOFINDFOLLOWERSNAME.ipynb
@@ -65,10 +65,10 @@
     {
       "cell_type": "code",
       "source": [
-        "consumer_key= \"QsmNroZ5V6ghSPJ1TEGwMA2QR\"\n",
-        "consumer_secret_key=\"E7lHrsHc0P3EU6MYSHdzpmSkqXMNzCJYf6Mk9veCmoEB78pgIg\"\n",
-        "access_token=\"3382755314-upIENhytORCLH3EKAQJl0GrHFbMXsfyHKfqlRna\"\n",
-        "access_token_secret=\"5i4U55MU7dvwtCN5v8ZALik5XD4qZK3Jg8bkhFrVFhscu\""
+        "consumer_key= \"xxxxxxxxxxxx\"\n",
+        "consumer_secret_key=\"xxxxxxxxxxxxxxxxxxxxx\"\n",
+        "access_token=\"xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
+        "access_token_secret=\"xxxxxxxxxxxxxxxxxxxxxx\""
       ],
       "metadata": {
         "id": "dcbb0IsX4JAW"
